# journal-receiver

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/journal_receiver/: main.py
uploads/: 20250725_034557_629d9c16.m4a  20250725_035806_5fcfae26.m4a  20250725_035831_94b91621.m4a  20250725_035933_0a2623e5.m4a  20250725_042151_574aa5ec.m4a  20250725_043359_7d631b63.m4a  20250725_043826_1dbf8ec6.m4a  20250725_043943_3567b3ee.m4a  20250725_181547_73731c27.m4a  20250725_233701_5c91c8f3.m4a
